third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/mutate_field_invalid.exp

Diagnostics:
error: cannot write local `s` since it is borrowed
   ┌─ tests/reference-safety/v1-tests/mutate_field_invalid.move:11:9
   │
10 │         let f = &s.f;
   │                 ---- field `f` previously borrowed here
11 │         *s = S { f: 0, g: 0 };
   │         ^^^^^^^^^^^^^^^^^^^^^ write attempted here
12 │         *f;
   │         -- conflicting reference `f` used here

error: cannot write local `s` since it is borrowed
   ┌─ tests/reference-safety/v1-tests/mutate_field_invalid.move:15:9
   │
14 │         let f = &mut s.f;
   │                 -------- field `f` previously mutably borrowed here
15 │         *s = S { f: 0, g: 0 };
   │         ^^^^^^^^^^^^^^^^^^^^^ write attempted here
16 │         *f;
   │         -- conflicting reference `f` used here

error: cannot write local `s` since it is borrowed
   ┌─ tests/reference-safety/v1-tests/mutate_field_invalid.move:19:9
   │
18 │         let f = id(&s.f);
   │                 -------- field `f` previously borrowed here
19 │         *s = S { f: 0, g: 0 };
   │         ^^^^^^^^^^^^^^^^^^^^^ write attempted here
20 │         *f;
   │         -- conflicting reference `f` used here

error: cannot write local `s` since it is borrowed
   ┌─ tests/reference-safety/v1-tests/mutate_field_invalid.move:23:9
   │
22 │         let f = id_mut(&mut s.f);
   │                 ---------------- field `f` previously mutably borrowed here
23 │         *s = S { f: 0, g: 0 };
   │         ^^^^^^^^^^^^^^^^^^^^^ write attempted here
24 │         *f;
   │         -- conflicting reference `f` used here
